--- a/views/index.html
+++ b/views/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Corona Social</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
-<body>
+<body class="container">
     <template id="story">
         <div class="story">
             <small id="author"></small>
@@ -21,11 +22,12 @@
     </template>
     <div id="container">
         <header>
-            <button id="logout">Logout</button>
-            <ul>
-                <li><a href="/">Stories Wall</a></li>
-                <li><a href="/me">Personal Wall</a></li>
-            </ul>
+            <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
+                <a class="navbar-brand" href="#">Corona Social</a>
+                <a class="nav-item nav-link" href="/">Stories Wall</a>
+                <a class="nav-item nav-link" href="/me">Personal Wall</a>
+                <a class="nav-item btn btn-outline-danger">Log out</a>
+            </nav>
         </header>
         <div id="stories">
             <!-- <div class="story">
