--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,19 @@
 body {
-  padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
   color: #00B7FF;
+}
+
+.stories {
+  margin-top: 1em;
+}
+
+.story {
+  margin-bottom: 1em;
+}
+
+.create {
+  margin-top: 1em;
 }
