--- a/views/index.html
+++ b/views/index.html
@@ -4,23 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Corona Social</title>
+    <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body class="container">
-    <template id="story">
-        <div class="story">
-            <small id="author"></small>
-            <p id="created"></p>
-            <p id="text"></p>
-            <form class="like">
-                <label for="score">Score: </label>
-                <input type="number" max="5" min="0" name="score" value="0">
-                <button type="submit">Like</button>
-            </form>
-            <p id="created"></p>
-        </div>
-    </template>
-    <div id="container">
+    <div>
         <header>
             <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
                 <a class="navbar-brand" href="#">Corona Social</a>
@@ -29,47 +17,46 @@
                 <a class="nav-item btn btn-outline-danger">Log out</a>
             </nav>
         </header>
-        <div id="stories">
-            <!-- <div class="story">
+        <div class="stories">
+            <div class="story container border">
                 <h1>Test story</h1>
-                <small>by user1</small>
+                <h4>By user1</h4>
                 <p>This is the body</p>
+                <hr>
                 <form class="like">
-                    <label for="score">Score: </label>
-                    <input type="number" max="5" min="0" name="score" value="0">
-                    <button type="submit">Like</button>
+                    <div class='form-group row'>
+                        <label class="col-1"for="score">Score: </label>
+                        <input class="form-control col-1" type="number" max="5" min="0" name="score" value="0">
+                        <button type="submit" class="btn btn-primary col-10">Like</button>
+                    </div>
                 </form>
             </div>
-            <div class="story">
+            <div class="story container border">
                 <h1>Test story</h1>
-                <small>by user2</small>
+                <h4>By user5</h4>
                 <p>This is the body</p>
+                <hr>
                 <form class="like">
-                    <label for="score">Score: </label>
-                    <input type="number" max="5" min="0" name="score" value="0">
-                    <button type="submit">Like</button>
+                    <div class='form-group row'>
+                        <label class="col-1"for="score">Score: </label>
+                        <input class="form-control col-1" type="number" max="5" min="0" name="score" value="0">
+                        <button type="submit" class="btn btn-primary col-10">Like</button>
+                    </div>
                 </form>
             </div>
-            <div class="story">
+            <div class="story container border">
                 <h1>Test story</h1>
-                <small>by user3</small>
+                <h4>By user2</h4>
                 <p>This is the body</p>
+                <hr>
                 <form class="like">
-                    <label for="score">Score: </label>
-                    <input type="number" max="5" min="0" name="score" value="0">
-                    <button type="submit">Like</button>
+                    <div class='form-group row'>
+                        <label class="col-1"for="score">Score: </label>
+                        <input class="form-control col-1" type="number" max="5" min="0" name="score" value="0">
+                        <button type="submit" class="btn btn-primary col-10">Like</button>
+                    </div>
                 </form>
             </div>
-            <div class="story">
-                <h1>Test story</h1>
-                <small>by user4</small>
-                <p>This is the body</p>
-                <form class="like">
-                    <label for="score">Score: </label>
-                    <input type="number" max="5" min="0" name="score" value="0">
-                    <button type="submit">Like</button>
-                </form>
-            </div> -->
         </div>
     </div>
     <script type="module" src="/js/index.js"></script>
