--- a/views/me.html
+++ b/views/me.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Corona Social</title>
+    <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
    </head>
 <body>
@@ -17,7 +18,7 @@
             </nav>
         </header>
 
-        <div id="create">
+        <div class="create" id="create">
             <form id="createstory">
                 <div class="form-group">
                     <textarea class="form-control"rows="10" cols="100" name="text" id="text" placeholder="Your story"></textarea>
