--- a/views/index.html
+++ b/views/index.html
@@ -61,4 +61,9 @@
     </div>
     <script type="module" src="/js/index.js"></script>
 </body>
+<script src="http://localhost/socket.io/socket.io.js"></script>
+<script>
+  var socket = io();
+
+</script>
 </html>
