--- a/views/index.html
+++ b/views/index.html
@@ -32,7 +32,7 @@
           <h4>By user1</h4>
           <p>This is the body</p>
           <hr />
-          <form class="like">
+          <form id="like">
             <div class="form-group row">
               <label class="col-1" for="score">Score: </label>
               <input
@@ -41,6 +41,7 @@
                 max="5"
                 min="0"
                 name="score"
+                id="likeNumber"
                 value="0"
               />
               <button type="submit" class="btn btn-primary col-10">Like</button>
@@ -92,7 +93,7 @@
     <script type="module" src="/js/index.js"></script>
   </body>
   <script src="http://localhost/socket.io/socket.io.js"></script>
-  <script>
-    var socket = io();
-  </script>
+  <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  
 </html>
