--- a/views/me.html
+++ b/views/me.html
@@ -1,57 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Corona Social</title>
-    <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-   </head>
-<body>
+    <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
     <header>
-        <nav
-          class="navbar navbar-expand-lg navbar-light"
-          style="background-color: #e3f2fd;"
-        >
-          <a class="navbar-brand" href="#">Corona Social</a>
-          <div class="navbar-nav">
-            <a class="nav-item nav-link" href="/">Stories Wall</a>
-            <a class="nav-item nav-link" href="/me">Personal Wall</a>
-          </div>
-          <div class="navbar-nav">
-            <a class="nav-item btn btn-outline-danger" id="logout">Log out</a>
-          </div>
-        </nav>
+      <nav
+        class="navbar navbar-expand-lg navbar-light"
+        style="background-color: #e3f2fd;"
+      >
+        <a class="navbar-brand" href="#">Corona Social</a>
+        <div class="navbar-nav">
+          <a class="nav-item nav-link" href="/">Stories Wall</a>
+          <a class="nav-item nav-link" href="/me">Personal Wall</a>
+        </div>
+        <div class="navbar-nav">
+          <a class="nav-item btn btn-outline-danger" id="logout">Log out</a>
+        </div>
+      </nav>
     </header>
     <div class="container" id="container">
+      <h1 id="greeting"></h1>
 
-        <h1 id="greeting"></h1>
-
-        <div class="create" id="create">
-            <form action="/stories/create-story" enctype="multipart/form-data" method="POST">
-                <div class="form-group">
-                    <textarea class="form-control" rows="10" cols="100" name="text" id="text" placeholder="Your story"></textarea>
-                    <input type="file" id="fileupload" class="form-control-file" name="photos" multiple>
-                    <button class="btn-info col-12" type="submit">Post</button>
-                </div>
-            </form>
-        </div>
-        <div id="stories">
-            <div class="border container">
-                <h1>Test story</h1>
-                <h4>By Admin</h4>
-                <hr>
-                <p>This is the body</p>
-                <hr>
-                <p>3 likes</p>
-            </div>
-        </div>
+      <div class="create" id="create">
+        <form id="create-story">
+          <div class="form-group">
+            <textarea
+              class="form-control"
+              rows="10"
+              cols="100"
+              name="text"
+              id="text"
+              placeholder="Your story"
+            ></textarea>
+            <input
+              type="file"
+              id="fileupload"
+              class="form-control-file"
+              name="photos"
+              multiple
+            />
+            <button class="btn-info col-12" type="submit">Post</button>
+          </div>
+        </form>
+      </div>
+      <div id="stories"></div>
     </div>
     <!-- <script src="/js/main.js"></script> -->
-</body>
-<script src="http://localhost/socket.io/socket.io.js"></script>
-<script src="https://code.jquery.com/jquery-1.11.1.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  </body>
+  <script src="http://localhost/socket.io/socket.io.js"></script>
+  <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
-<script type="module" src="/js/me.js"></script>
+  <script type="module" src="/js/me.js"></script>
 </html>
