--- a/views/index.html
+++ b/views/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <header>
+      <div class="offline text-center" id="offline" style="display: none">You are offline</div>
       <nav
         class="navbar navbar-expand-lg navbar-light"
         style="background-color: #e3f2fd;"
@@ -34,7 +35,10 @@
       <p id="sort-text">Sorting by latest</p>
       <div class="stories"></div>
     </div>
+    <script src="/js/app.js"></script>
     <script type="module" src="/js/index.js"></script>
+    <script src="/js/idb.js"></script>
+    <script src="/js/database.js"></script>
   </body>
   <script src="http://localhost/socket.io/socket.io.js"></script>
   <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
