--- a/views/me.html
+++ b/views/me.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <header>
+      <div class="offline text-center" id="offline"  style="display: none">You are offline</div>
       <nav
         class="navbar navbar-expand-lg navbar-light"
         style="background-color: #e3f2fd;"
@@ -53,7 +54,7 @@
           </div>
         </form>
       </div>
-      <div id="stories"></div>
+      <div class="stories" id="stories"></div>
     </div>
     <!-- <script src="/js/main.js"></script> -->
   </body>
@@ -61,5 +62,8 @@
   <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
+  <script src="/js/app.js"></script>
   <script type="module" src="/js/me.js"></script>
+  <script src="/js/idb.js"></script>
+  <script src="/js/database.js"></script>
 </html>
