Socket io story updates

--- a/views/index.html
+++ b/views/index.html
@@ -33,14 +33,17 @@
       <h1 id="greeting"></h1>
       <button id="toggle-sort">Toggle sort</button>
       <p id="sort-text">Sorting by latest</p>
+      <div id="alertWindow"></div>
       <div class="stories"></div>
+    </div>
+      
     </div>
     <script src="/js/app.js"></script>
     <script type="module" src="/js/index.js"></script>
     <script src="/js/idb.js"></script>
     <script src="/js/database.js"></script>
   </body>
-  <script src="http://localhost/socket.io/socket.io.js"></script>
+  <script src="http://localhost:3000/socket.io/socket.io.js"></script>
   <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 </html>
