--- a/views/me.html
+++ b/views/me.html
@@ -58,7 +58,7 @@
     </div>
     <!-- <script src="/js/main.js"></script> -->
   </body>
-  <script src="http://localhost/socket.io/socket.io.js"></script>
+  <script src="http://localhost:3000/socket.io/socket.io.js"></script>
   <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
