--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -25,3 +25,17 @@ a {
 .main {
   margin-top: 1em;
 }
+
+.image-padding {
+  padding: 5px;
+  padding-bottom: 15px
+}
+
+img {
+  width: auto;
+  height: auto;
+  max-width: 100%;
+  max-height: 400px;
+  border-radius: 2px;
+  border: 1px solid lightgray;
+}
