--- a/views/login.html
+++ b/views/login.html
@@ -11,8 +11,10 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
+    <link rel="manifest" href="/manifest.json">
   </head>
   <body>
+    <div class="offline text-center row" id="offline" style="display: none">You are offline</div>
     <div class="container text-center main border">
       <h1>Welcome to Corona Social</h1>
       <h2>Please sign in</h2>
@@ -30,6 +32,7 @@
       </form>
 
       <a href="/register">Register</a>
+      <script src="/js/app.js"></script>
       <script type="module" src="/js/login.js"></script>
   </div>
   </body>
