--- a/views/me.html
+++ b/views/me.html
@@ -31,8 +31,9 @@
       </nav>
     </header>
     <div class="container" id="container">
+      <br>
       <h1 id="greeting"></h1>
-
+      <hr>
       <div class="create" id="create">
         <form id="create-story">
           <div class="form-group">
@@ -44,6 +45,7 @@
               id="text"
               placeholder="Your story"
             ></textarea>
+            <br>
             <input
               type="file"
               id="fileupload"
@@ -51,9 +53,11 @@
               name="photos"
               multiple
             />
-            <button class="btn-info col-12" type="submit">Post</button>
+            <br>
+            <button class="btn btn-info col-12" type="submit">Post</button>
           </div>
         </form>
+        <hr>
       </div>
       <div class="stories" id="stories"></div>
     </div>
