--- a/views/index.html
+++ b/views/index.html
@@ -31,8 +31,12 @@
       </nav>
     </header>
     <div class="container">
+      <br>
       <h1 id="greeting"></h1>
-      <button id="toggle-sort">Toggle sort</button>
+      <hr>
+      <div class="btn-padding row">
+        <button class="btn btn-info col-xs-12 col-sm-3 col-md-2" id="toggle-sort">Toggle sort</button>
+      </div>
       <p id="sort-text">Sorting by latest</p>
       <div id="alertWindow"></div>
       <div class="stories"></div>
