Made likes look better

--- a/views/me.html
+++ b/views/me.html
@@ -22,8 +22,8 @@
       >
         <a class="navbar-brand" href="#">Corona Social</a>
         <div class="navbar-nav">
-          <a class="nav-item nav-link" href="/">Stories Wall</a>
-          <a class="nav-item nav-link" href="/me">Personal Wall</a>
+          <a class="nav-item nav-link" href="/">Friends Wall</a>
+          <a class="nav-item nav-link" href="/me">My Wall</a>
         </div>
         <div class="navbar-nav">
           <a class="nav-item btn btn-outline-danger" id="logout">Log out</a>
@@ -68,7 +68,7 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
   <script src="/js/app.js"></script>
-  <script type="module" src="/js/me.js"></script>
+  <script src="/js/me.js"></script>
   <script src="/js/idb.js"></script>
   <script src="/js/database.js"></script>
 </html>
