--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,6 +14,10 @@ a {
   margin-bottom: 1em;
 }
 
+.form-inline {
+  margin-bottom: 5px;
+}
+
 .create {
   margin-top: 1em;
 }
@@ -25,6 +29,11 @@ a {
 .main {
   margin-top: 1em;
 }
+
+.form-width-override {
+  width: inherit;
+}
+
 .btn-padding {
   padding-bottom: 5px;
 }
