--- a/views/index.html
+++ b/views/index.html
@@ -22,8 +22,8 @@
       >
         <a class="navbar-brand" href="#">Corona Social</a>
         <div class="navbar-nav">
-          <a class="nav-item nav-link" href="/">Stories Wall</a>
-          <a class="nav-item nav-link" href="/me">Personal Wall</a>
+          <a class="nav-item nav-link" href="/">Friends Wall</a>
+          <a class="nav-item nav-link" href="/me">My Wall</a>
         </div>
         <div class="navbar-nav">
           <a class="nav-item btn btn-outline-danger" id="logout">Log out</a>
@@ -44,7 +44,7 @@
       
     </div>
     <script src="/js/app.js"></script>
-    <script type="module" src="/js/index.js"></script>
+    <script src="/js/index.js"></script>
     <script src="/js/idb.js"></script>
     <script src="/js/database.js"></script>
   </body>
