--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -22,6 +22,12 @@ a {
   margin-top: 1em;
 }
 
+@media (max-width: 992px) {
+  .mobile-sm-padding {
+      margin-bottom: 5px; 
+  }
+}
+
 .login {
   margin-top: 1em;
 }
