--- a/views/me.html
+++ b/views/me.html
@@ -22,8 +22,8 @@
       >
         <a class="navbar-brand" href="#">Corona Social</a>
         <div class="navbar-nav">
-          <a class="nav-item nav-link" href="/">Friends Wall</a>
-          <a class="nav-item nav-link" href="/me">My Wall</a>
+          <a class="nav-item nav-link" href="/">Stories Wall</a>
+          <a class="nav-item nav-link" href="/me">Personal Wall</a>
         </div>
         <div class="navbar-nav">
           <a class="nav-item btn btn-outline-danger" id="logout">Log out</a>
